--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  flutter_spinkit: "^4.0.0"
+  rflutter_alert: ^1.0.3
   http: ^0.12.0+2
   geolocator: '^4.0.3'
   flutter:
